# pico-arduino-compat

./: .gitignore  .gitmodules  README.md  arduino-libraries.md
arduino-compat/: CMakeLists.txt
arduino-compat/arduino-pico-extra/: Arduino.h  HardwareSerialStdio.cpp  HardwareSerialStdio.h  SPI.h  SerialExtern.cpp  SerialExtern.h  pins_arduino.h
arduino-compat/test/: CMakeLists.txt  main.cpp  pico_sdk_import.cmake
docs/: README.md  libraries.html
libs-extra/: README.md
libs/107-arduino-bmp388/: CMakeLists.txt  init.sh
libs/107-arduino-boostunits/: CMakeLists.txt  init.sh
libs/107-arduino-debug/: CMakeLists.txt  init.sh
libs/107-arduino-mcp2515/: CMakeLists.txt  init.sh
libs/107-arduino-nmea-parser/: CMakeLists.txt  init.sh
libs/107-arduino-sensor/: CMakeLists.txt  init.sh
libs/107-arduino-tmf8801/: CMakeLists.txt  init.sh
libs/107-arduino-uavcan/: CMakeLists.txt  init.sh
libs/a4963/: CMakeLists.txt  init.sh
libs/a4990motorshield/: CMakeLists.txt  init.sh
libs/abb-powerone-aurora-inverter-communication-protocol/: CMakeLists.txt  init.sh
libs/absmouse/: CMakeLists.txt  init.sh
libs/acan/: CMakeLists.txt  init.sh
libs/acan2515/: CMakeLists.txt  init.sh
libs/acan2515tiny/: CMakeLists.txt  init.sh
libs/acan2517/: CMakeLists.txt  init.sh
libs/acan2517fd/: CMakeLists.txt  init.sh
libs/acan_esp32/: CMakeLists.txt  init.sh
libs/acan_t4/: CMakeLists.txt  init.sh
libs/accelerometer-adxl335/: CMakeLists.txt  init.sh
libs/accelerometer-adxl345/: CMakeLists.txt  init.sh
libs/accelerometer-and-gyroscope-lsm6ds3/: CMakeLists.txt  init.sh
libs/accelerometer_h3lis331dl/: CMakeLists.txt  init.sh
libs/accelerometer_mma7660/: CMakeLists.txt  init.sh
libs/accelmotor/: CMakeLists.txt  init.sh
libs/accelstepper/: CMakeLists.txt  init.sh
libs/accelstepperwithdistances/: CMakeLists.txt  init.sh
libs/accessories/: CMakeLists.txt  init.sh
libs/accessory-shield/: CMakeLists.txt  init.sh
libs/ace128/: CMakeLists.txt  init.sh
libs/acebutton/: CMakeLists.txt  init.sh
libs/acecommon/: CMakeLists.txt  init.sh
libs/acecrc/: CMakeLists.txt  init.sh
libs/acemenu/: CMakeLists.txt  init.sh
libs/aceroutine/: CMakeLists.txt  init.sh
libs/acesegment/: CMakeLists.txt  init.sh
libs/acesegmentwriter/: CMakeLists.txt  init.sh
libs/acesorting/: CMakeLists.txt  init.sh
libs/acespi/: CMakeLists.txt  init.sh
libs/acetime/: CMakeLists.txt  init.sh
libs/acetmi/: CMakeLists.txt  init.sh
libs/aceutils/: CMakeLists.txt  init.sh
libs/acewire/: CMakeLists.txt  init.sh
libs/aci_10k_an-temp-sensor/: CMakeLists.txt  init.sh
libs/acrobotic-ssd1306/: CMakeLists.txt  init.sh
libs/acs-m1128/: CMakeLists.txt  init.sh
libs/acs712/: CMakeLists.txt  init.sh
libs/ad5144a/: CMakeLists.txt  init.sh
libs/ad520x/: CMakeLists.txt  init.sh
libs/ad5231-arduino-library/: CMakeLists.txt  init.sh
libs/ad524x/: CMakeLists.txt  init.sh
libs/ad5254_asukiaaa/: CMakeLists.txt  init.sh
libs/ad57x4r/: CMakeLists.txt  init.sh
libs/ad7173/: CMakeLists.txt  init.sh
libs/ad7193/: CMakeLists.txt  init.sh
libs/ad7390-dac-library/: CMakeLists.txt  init.sh
libs/ad9850spi/: CMakeLists.txt  init.sh
libs/ad985x/: CMakeLists.txt  init.sh
libs/ad_sensors/: CMakeLists.txt  init.sh
libs/adafruit-10dof/: CMakeLists.txt  init.sh
libs/adafruit-9dof/: CMakeLists.txt  init.sh
libs/adafruit-ads1x15/: CMakeLists.txt  init.sh
libs/adafruit-adt7410-library/: CMakeLists.txt  init.sh
libs/adafruit-adxl343/: CMakeLists.txt  init.sh
libs/adafruit-adxl345/: CMakeLists.txt  init.sh
libs/adafruit-ahrs/: CMakeLists.txt  init.sh
libs/adafruit-aht10/: CMakeLists.txt  init.sh
libs/adafruit-ahtx0/: CMakeLists.txt  init.sh
libs/adafruit-am-radio-library/: CMakeLists.txt  init.sh
libs/adafruit-am2315/: CMakeLists.txt  init.sh
libs/adafruit-am2320-sensor-library/: CMakeLists.txt  init.sh
libs/adafruit-amg88xx-library/: CMakeLists.txt  init.sh
libs/adafruit-apds9960-library/: CMakeLists.txt  init.sh
libs/adafruit-arcada-gifdecoder/: CMakeLists.txt  init.sh
libs/adafruit-arcada-library/: CMakeLists.txt  init.sh
libs/adafruit-as726x/: CMakeLists.txt  init.sh
libs/adafruit-as7341/: CMakeLists.txt  init.sh
libs/adafruit-avrprog/: CMakeLists.txt  init.sh
libs/adafruit-aw9523/: CMakeLists.txt  init.sh
libs/adafruit-bd3491fs/: CMakeLists.txt  init.sh
libs/adafruit-blefirmata/: CMakeLists.txt  init.sh
libs/adafruit-bluefruitle-nrf51/: CMakeLists.txt  init.sh
libs/adafruit-bme280-library/: CMakeLists.txt  init.sh
libs/adafruit-bme680-library/: CMakeLists.txt  init.sh
libs/adafruit-bmp085-library/: CMakeLists.txt  init.sh
libs/adafruit-bmp085-unified/: CMakeLists.txt  init.sh
libs/adafruit-bmp183-library/: CMakeLists.txt  init.sh
libs/adafruit-bmp183-unified-library/: CMakeLists.txt  init.sh
libs/adafruit-bmp280-library/: CMakeLists.txt  init.sh
libs/adafruit-bmp3xx-library/: CMakeLists.txt  init.sh
libs/adafruit-bno055/: CMakeLists.txt  init.sh
libs/adafruit-bno08x/: CMakeLists.txt  init.sh
libs/adafruit-bno08x-rvc/: CMakeLists.txt  init.sh
libs/adafruit-busio/: CMakeLists.txt  init.sh
libs/adafruit-cap1188-library/: CMakeLists.txt  init.sh
libs/adafruit-cc3000-library/: CMakeLists.txt  init.sh
libs/adafruit-ccs811-library/: CMakeLists.txt  init.sh
libs/adafruit-circuit-playground/: CMakeLists.txt  init.sh
libs/adafruit-composite-video-library/: CMakeLists.txt  init.sh
libs/adafruit-dap-library/: CMakeLists.txt  init.sh
libs/adafruit-dma-neopixel-library/: CMakeLists.txt  init.sh
libs/adafruit-dotstar/: CMakeLists.txt  init.sh
libs/adafruit-dotstarmatrix/: CMakeLists.txt  init.sh
libs/adafruit-dps310/: CMakeLists.txt  init.sh
libs/adafruit-drv2605-library/: CMakeLists.txt  init.sh
libs/adafruit-ds1841/: CMakeLists.txt  init.sh
libs/adafruit-ds3502/: CMakeLists.txt  init.sh
libs/adafruit-emc2101/: CMakeLists.txt  init.sh
libs/adafruit-epd/: CMakeLists.txt  init.sh
libs/adafruit-esp8266/: CMakeLists.txt  init.sh
libs/adafruit-feather-oled/: CMakeLists.txt  init.sh
pico-libs/: CMakeLists.txt
(+8125 files in other folders)
